--- a/usopp.html
+++ b/usopp.html
@@ -27,7 +27,7 @@
 
     <nav class="sidenav">
       <ul>
-        <li><a href="./luffy.html"><img src="img/icones/mugiwara.svg" alt=""></a></li>
+        <li><a href="./index.html"><img src="img/icones/mugiwara.svg" alt=""></a></li>
         <li><a href="./zoro.html"><img src="img/icones/zoro.svg" alt=""></a></li>
         <li><a href="./nami.html"><img src="img/icones/nami.svg" alt=""></a></li>
         <li><a href="./usopp.html"><img src="img/icones/usopp.svg" alt=""></a></li>
