adicionado efeito no header e diminuição da logo em mobile

--- a/zoro.html
+++ b/zoro.html
@@ -14,8 +14,8 @@
 
 <body>
   <div class="estrutura">
-    <header class="header">
-      <a href="#" class="logo"><img src="img/mini-logo.svg" alt=""></a>
+    <header class="header fadeInDown" data-anime="200"">
+      <a href=" #" class="logo"><img src="img/mini-logo.svg" alt=""></a>
       <nav>
         <ul>
           <li><a href="#">Tripulação</a></li>
