--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
   <div class="estrutura">
-    <header class="header">
+    <header class="header fadeInDown" data-anime="200">
       <a href="#" class="logo"><img src="img/mini-logo.svg" alt=""></a>
       <nav>
         <ul>
@@ -98,7 +98,7 @@
       <p>Emerson © 2023. Alguns direitos reservados.</p>
     </footer>
   </div>
-  
+
   <script src="./js/simple-anime.js"></script>
 </body>
 
