--- a/nami.html
+++ b/nami.html
@@ -14,8 +14,8 @@
 
 <body>
   <div class="estrutura">
-    <header class="header">
-      <a href="#" class="logo"><img src="img/mini-logo.svg" alt=""></a>
+    <header class="header fadeInDown" data-anime="200"">
+      <a href=" #" class="logo"><img src="img/mini-logo.svg" alt=""></a>
       <nav>
         <ul>
           <li><a href="#">Tripulação</a></li>
@@ -98,7 +98,7 @@
       <p>Emerson © 2023. Alguns direitos reservados.</p>
     </footer>
   </div>
-  
+
   <script src="./js/simple-anime.js"></script>
 </body>
 
