--- a/index.html
+++ b/index.html
@@ -14,13 +14,12 @@
 
 <body>
   <div class="estrutura">
-    <header class="header fadeInDown" data-anime="200">
+    <header class="header">
       <a href="#" class="logo"><img src="img/mini-logo.svg" alt=""></a>
       <nav>
         <ul>
           <li><a href="#">Tripulação</a></li>
           <li><a href="#">Personagens</a></li>
-          <li><a href="#">Contato</a></li>
         </ul>
       </nav>
     </header>
@@ -99,7 +98,8 @@
     </footer>
   </div>
 
-  <script src="./js/simple-anime.js"></script>
+  <script src="./js/plugins/simple-anime.js"></script>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
